Bug 1661544 - Ensure initial viewport is computed before reporting innerWidth. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D88947